--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mkdirp": "^1.0.4",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
+    "path": "^0.12.7",
     "resize-img": "^2.0.0"
   }
 }
