--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "my course project",
   "main": "app.js",
   "scripts": {
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "Avdey",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
   "dependencies": {
-    "nodemon": "^2.0.6",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
@@ -24,6 +26,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
     "path": "^0.12.7",
-    "resize-img": "^2.0.0"
+    "resize-img": "^2.0.0",
+    "transliteration": "^2.2.0"
   }
 }
