--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
@@ -25,6 +26,8 @@
     "mkdirp": "^1.0.4",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "resize-img": "^2.0.0",
     "transliteration": "^2.2.0"
